k8s/bases/infrastructure/controllers/reloader/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: reloader
  labels:
    pod-security.kubernetes.io/enforce: restricted
    pod-security.kubernetes.io/enforce-version: latest
