k8s/bases/infrastructure/controllers/reloader/networkpolicy.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: allow-reloader
  namespace: reloader
spec:
  endpointSelector: {}
  egress:
    # Kube API for watching configmaps/secrets
    - toEntities:
        - kube-apiserver
    # DNS resolution
    - toEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: kube-system
            k8s-app: kube-dns
      toPorts:
        - ports:
            - port: "53"
              protocol: UDP
            - port: "53"
              protocol: TCP
